--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>S'watow</title>
   <link rel="stylesheet" href="reset.css">
  </head>
  <body>
     <div class="main-wrapper">
     <header>
         <nav>
-            <!-- <li class="logo"><a href="#">黄墨一</a></li>
+            <!-- <li class="logo"><a href="#">反气旋</a></li>
             <ul>
                 <li><a href="#" class="active">首页</a></li>
                 <li><a href="#">精品博客</a></li>
@@ -19,7 +19,7 @@
         </nav>
         <div id="banner">
             <div class="inner">
-                <h1>黄墨一</h1>
+                <h1>反气旋</h1>
                 <p class="sub-heading">围观其实也是一种态度，你觉得呢？</p>
                  <button class="main-btn">了解我</button>
                  <!-- <div class="more">
@@ -142,7 +142,7 @@
         </ul>
 
         <div class="copy">
-            &copy 黄墨一-2017
+            &copy 反气旋-2019
         </div>
     </footer><!--页脚结束-->
     </div>
