--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <div class="main-wrapper">
     <header>
         <nav>
-            <!-- <li class="logo"><a href="#">反气旋</a></li>
+            <li class="logo"><a href="#">反气旋</a></li>
             <ul>
                 <li><a href="#" class="active">首页</a></li>
                 <li><a href="#">精品博客</a></li>
                 <li><a href="#">微博</a></li>
                 <li><a href="#">留言</a></li>
-            </ul> -->
+            </ul> 
         </nav>
         <div id="banner">
             <div class="inner">
