--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <div class="main-wrapper">
     <header>
         <nav>
-            <li class="logo"><a href="#">反气旋</a></li>
+            <!--<li class="logo"><a href="#">反气旋</a></li>
             <ul>
                 <li><a href="#" class="active">首页</a></li>
                 <li><a href="#">精品博客</a></li>
                 <li><a href="#">微博</a></li>
                 <li><a href="#">留言</a></li>
-            </ul> 
+            </ul> -->
         </nav>
         <div id="banner">
             <div class="inner">
                 <h1>反气旋</h1>
-                <p class="sub-heading">围观其实也是一种态度，你觉得呢？</p>
-                 <button class="main-btn">了解我</button>
+                <p class="sub-heading">铲平-洼……洼&坑……坑</p>
+                 <button class="main-btn">关于反气旋</button>
                  <!-- <div class="more">
                     更多
                  </div> -->
@@ -33,15 +33,15 @@
         <section class="green-section">
             <div class="wrapper">
                 <div>
-                    <h2>一个标题</h2>
+                    <h2>小知道</h2>
                     <div class="hr"></div>
                     <p class="sub-heading">lorem ipsum dolor sit amet, 
                     consectetur adipisicing elit.</p>
                 </div>
                 <div class="icon-group">
-                    <span class="icon">item1</span>
-                    <span class="icon">item2</span>
-                    <span class="icon">item3</span>
+                    <span class="icon">填技术坑ing...</span>
+                    <span class="icon">在学习ing...</span>
+                    <span class="icon">碎碎念...</span>
                 </div>
             </div>
         </section>
@@ -51,7 +51,7 @@
             <div class="img-section">
                     <img src="img/icon1.png" alt=""></div>
                 <div class="text-section">
-                    <h2>又一个标题</h2>
+                    <h2>hin推荐文章</h2>
                     <div class="sub-heading">我是副标题你好</div>
                     <p>Formally established in 1946, the aim is to promote cooperation among countries through education, science and culture, and contribute to world peace and security. According to the introduction, UNESCO has 195 Member States and 58 executive board members.</p>
                 </div>
